cli/tests/ui/policy_ref_invalid.stderr
Error: manifest::validation_error

  × check failed
  ╰─▶ manifest validation error at policies[0]: invalid policy ref
      `wrapper.rewrite`: expected `#<use>.<export>`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/policy_ref_invalid.json5:7:14]
 6 │   },
 7 │   policies: ["wrapper.rewrite"],
   ·              ────────┬────────
   ·                      ╰── invalid policy ref `wrapper.rewrite`: expected `#<use>.<export>`
 8 │ }
   ╰────
